Update devcontainer configuration for Flutter

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,21 @@
 {
-  "name": "Flutter Codespace",
+  "name": "Flutter Stable Dev",
   "image": "cirrusci/flutter:stable",
-  "features": {},
-  "postCreateCommand": "flutter doctor",
+
+  "postCreateCommand": "flutter doctor -v",
+
   "customizations": {
     "vscode": {
       "extensions": [
         "Dart-Code.flutter",
         "Dart-Code.dart-code"
-      ]
+      ],
+      "settings": {
+        "editor.formatOnSave": true
+      }
     }
-  }
+  },
+
+  "forwardPorts": [],
+  "remoteUser": "root"
 }
